# packall

./: LICENSE  README.md
include/packall/: packall.h  packall_forward.h  packall_text.h  struct_decompose.inc
test/: CMakeLists.txt  packall_bin_test.cc  packall_compat_test.cc  packall_fuzz.cc  packall_test.cc  packall_test.h  packall_text_test.cc
test/msvc/: msvc.sln  msvc.vcxproj  msvc.vcxproj.filters
